--- a/flutter_drawing/pubspec.yaml
+++ b/flutter_drawing/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   provider: ^6.0.0
   uuid: ^3.0.5
+  flutter_speed_dial: ^5.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
